; ModuleID = '/home/carl/AnghaBench/libui/unix/extr_opentype.c_uiprivOpenTypeFeaturesToPangoCSSFeaturesString.c'
source_filename = "/home/carl/AnghaBench/libui/unix/extr_opentype.c_uiprivOpenTypeFeaturesToPangoCSSFeaturesString.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64 }

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@toCSS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_6__* @uiprivOpenTypeFeaturesToPangoCSSFeaturesString(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_6__*, align 8
  store i32* %0, i32** %2, align 8
  %4 = call %struct.TYPE_6__* @g_string_new(i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0))
  store %struct.TYPE_6__* %4, %struct.TYPE_6__** %3, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = load i32, i32* @toCSS, align 4
  %7 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %8 = call i32 @uiOpenTypeFeaturesForEach(i32* %5, i32 %6, %struct.TYPE_6__* %7)
  %9 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %20

13:                                               ; preds = %1
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %15 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %16 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = sub nsw i64 %17, 2
  %19 = call i32 @g_string_truncate(%struct.TYPE_6__* %14, i64 %18)
  br label %20

20:                                               ; preds = %13, %1
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  ret %struct.TYPE_6__* %21
}

declare dso_local %struct.TYPE_6__* @g_string_new(i8*) #1

declare dso_local i32 @uiOpenTypeFeaturesForEach(i32*, i32, %struct.TYPE_6__*) #1

declare dso_local i32 @g_string_truncate(%struct.TYPE_6__*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
